gungraun/tests/ui/both/test_file_parameter_when_invalid.stderr
error: The provided file 'gungraun/tests/fixtures/empty.fix' was empty
 --> tests/ui/both/test_file_parameter_when_invalid.rs:7:29
  |
7 |     #[benches::my_id(file = "gungraun/tests/fixtures/empty.fix")]
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: The provided file 'gungraun/tests/fixtures/empty.fix' was empty
  --> tests/ui/both/test_file_parameter_when_invalid.rs:13:29
   |
13 |     #[benches::my_id(file = "gungraun/tests/fixtures/empty.fix")]
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Error opening '$WORKSPACE/target/tests/trybuild/gungraun/gungraun/tests/fixtures/does_not_exist': No such file or directory (os error 2)
  --> tests/ui/both/test_file_parameter_when_invalid.rs:23:29
   |
23 |     #[benches::my_id(file = "gungraun/tests/fixtures/does_not_exist")]
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Error opening '$WORKSPACE/target/tests/trybuild/gungraun/gungraun/tests/fixtures/does_not_exist': No such file or directory (os error 2)
  --> tests/ui/both/test_file_parameter_when_invalid.rs:29:29
   |
29 |     #[benches::my_id(file = "gungraun/tests/fixtures/does_not_exist")]
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Error reading line 1 in file '$WORKSPACE/target/tests/trybuild/gungraun/gungraun/tests/fixtures/invalid-utf8.fix': stream did not contain valid UTF-8
  --> tests/ui/both/test_file_parameter_when_invalid.rs:39:29
   |
39 |     #[benches::my_id(file = "gungraun/tests/fixtures/invalid-utf8.fix")]
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Error reading line 1 in file '$WORKSPACE/target/tests/trybuild/gungraun/gungraun/tests/fixtures/invalid-utf8.fix': stream did not contain valid UTF-8
  --> tests/ui/both/test_file_parameter_when_invalid.rs:45:29
   |
45 |     #[benches::my_id(file = "gungraun/tests/fixtures/invalid-utf8.fix")]
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Only one parameter of `file`, `args` or `iter` can be present
  --> tests/ui/both/test_file_parameter_when_invalid.rs:55:16
   |
55 |     #[benches::my_id(
   |                ^^^^^

error: Only one parameter of `file`, `args` or `iter` can be present
  --> tests/ui/both/test_file_parameter_when_invalid.rs:64:16
   |
64 |     #[benches::my_id(
   |                ^^^^^

error: Invalid value for `file`

         = help: The `file` parameter needs a literal string containing the path to an existing file at compile time
         = note: file = "benches/some_fixture"

  --> tests/ui/both/test_file_parameter_when_invalid.rs:93:29
   |
93 |     #[benches::my_id(file = ("gungraun/tests/fixtures/numbers.fix", String))]
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid value for `file`

         = help: The `file` parameter needs a literal string containing the path to an existing file at compile time
         = note: file = "benches/some_fixture"

  --> tests/ui/both/test_file_parameter_when_invalid.rs:99:29
   |
99 |     #[benches::my_id(file = ("gungraun/tests/fixtures/numbers.fix", String))]
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid value for `file`

         = help: The `file` parameter needs a literal string containing the path to an existing file at compile time
         = note: file = "benches/some_fixture"

   --> tests/ui/both/test_file_parameter_when_invalid.rs:109:29
    |
109 |     #[benches::my_id(file = String::from("gungraun/tests/fixtures/numbers.fix"))]
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid value for `file`

         = help: The `file` parameter needs a literal string containing the path to an existing file at compile time
         = note: file = "benches/some_fixture"

   --> tests/ui/both/test_file_parameter_when_invalid.rs:115:29
    |
115 |     #[benches::my_id(file = String::from("gungraun/tests/fixtures/numbers.fix"))]
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: The benchmark function should take exactly one `String` argument if the file parameter is present

         = help: fn benchmark_function(line: String) ...

   --> tests/ui/both/test_file_parameter_when_invalid.rs:125:29
    |
125 |     #[benches::my_id(file = "gungraun/tests/fixtures/numbers.fix")]
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: The benchmark function should take exactly one `String` argument if the file parameter is present

         = help: fn benchmark_function(line: String) ...

   --> tests/ui/both/test_file_parameter_when_invalid.rs:131:29
    |
131 |     #[benches::my_id(file = "gungraun/tests/fixtures/numbers.fix")]
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/both/test_file_parameter_when_invalid.rs:77:29
   |
77 |     #[benches::my_id(file = "gungraun/tests/fixtures/numbers.fix")]
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                             |
   |                             expected `u64`, found `String`
   |                             arguments to this function are incorrect
   |
help: the return type of this call is `String` due to the type of the argument passed
  --> tests/ui/both/test_file_parameter_when_invalid.rs:77:29
   |
77 |     #[benches::my_id(file = "gungraun/tests/fixtures/numbers.fix")]
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this argument influences the return type of `std`
note: function defined here
  --> $RUST/core/src/hint.rs
   |
   | pub const fn black_box<T>(dummy: T) -> T {
   |              ^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/both/test_file_parameter_when_invalid.rs:83:29
   |
83 |     #[benches::my_id(file = "gungraun/tests/fixtures/numbers.fix")]
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u64`, found `String`
84 |     fn bench_binary(value: u64) -> String {
   |        ------------ arguments to this function are incorrect
   |
note: function defined here
  --> tests/ui/both/test_file_parameter_when_invalid.rs:84:8
   |
84 |     fn bench_binary(value: u64) -> String {
   |        ^^^^^^^^^^^^ ----------

error[E0308]: mismatched types
  --> tests/ui/both/test_file_parameter_when_invalid.rs:82:5
   |
82 |     #[binary_benchmark]
   |     ^^^^^^^^^^^^^^^^^^^
   |     |
   |     expected `Command`, found `String`
   |     expected `gungraun::Command` because of return type
   |
   = note: this error originates in the attribute macro `binary_benchmark` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
   --> tests/ui/both/test_file_parameter_when_invalid.rs:144:5
    |
144 |     #[library_benchmark]
    |     ^^^^^^^^^^^^^^^^^^^^- help: try using a conversion method: `.to_string()`
    |     |
    |     expected `String`, found `u64`
    |     arguments to this function are incorrect
    |
note: function defined here
   --> tests/ui/both/test_file_parameter_when_invalid.rs:144:5
    |
144 |     #[library_benchmark]
    |     ^^^^^^^^^^^^^^^^^^^^
145 |     #[benches::my_id(file = "gungraun/tests/fixtures/numbers.fix", setup = my_setup)]
146 |     fn bench_library(value: String) -> u64 {
    |                      -------------
    = note: this error originates in the attribute macro `library_benchmark` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
   --> tests/ui/both/test_file_parameter_when_invalid.rs:151:29
    |
151 |     #[benches::my_id(file = "gungraun/tests/fixtures/numbers.fix", setup = { my_setup("some string".to_owned()); })]
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u64`, found `String`
152 |     fn bench_binary(value: u64) -> gungraun::Command {
    |        ------------ arguments to this function are incorrect
    |
note: function defined here
   --> tests/ui/both/test_file_parameter_when_invalid.rs:152:8
    |
152 |     fn bench_binary(value: u64) -> gungraun::Command {
    |        ^^^^^^^^^^^^ ----------
